--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script type="text/javascript" src="http://platform.linkedin.com/in.js">
 		api_key: k2gj7729wgfp
   		onLoad: onLinkedInLoad
+  		authorize: true
 	</script>
 
 	<link rel="shortcut icon" type="image/x-icon" href="giraffeLogo.jpg">
